[tool.poetry]
name = "rcdesign"
version = "0.2.0"
description = "A Python package for analysis and design of reinforced concrete sections according to IS456:2000"
authors = ["Satish Annigeri <satish.annigeri@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = ">=3.7,<3.10"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.9b0"

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"
