[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "rcdesign"
description = 'A Python package for reinforced concrete analysis and design as per IS 456:2000'
readme = "README.md"
requires-python = ">=3.7"
authors = [{name = "Satish Annigeri", email = "satish.annigeri@gmail.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]
dynamic = ["version"]
license = {file = "LICENSE.md"}
dependencies = [
  "numpy",
  "scipy",
  "sympy",
]

[project.optional-dependencies]
test = [
    "pytest >=2.7.3",
    "pytest-cov",
    "pytest-env",
]
dev = [
    "flake8",
    "black",
    "sphinx",
    "myst-parser",
    "sphinx-rtd-theme",
    "linkify-it-py",
]

[project.urls]
Documentation = "https://github.com/satish-annigeri/rcdesign#readme"
Issues = "https://github.com/satish-annigeri/rcdesign/issues"
Source = "https://github.com/satish-annigeri/rcdesign"
Home = "https://github.com/satish-annigeri/rcdesign"

[tool.flit.sdist]
exclude = [
    ".github/",
    "docs/",
    "tests/",
    "CODE_OF_CONDUCT.md",
    "CONTRIBUTING.md",
    "noxfile.py",
    ".gitignore",
    ".coveragerc",
]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
exclude = [
    "conf.py",
    "noxfile.py",
]
plugins = "numpy.typing.mypy_plugin"

[tool.pytest.ini_options]
addopts = "--cov --cov-report term-missing --cov-fail-under 5"

[tool.coverage.run]
source = ["rcdesign"]
omit = [
    "tests/*",
    "example*.py",
    "__main__*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "def report",
    "def asdict",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 130
