[project]
name = "rcdesign"
description = "A Python package for reinforced concrete analysis and design as per IS 456:2000"
readme = "README.md"
version = "0.4.15"
requires-python = ">=3.12"
authors = [{name = "Satish Annigeri", email = "satish.annigeri@gmail.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]
license = {file = "LICENSE.md"}
dependencies = [
    "numpy>=2.2.5",
    "scipy>=1.15.3",
    "sympy>=1.14.0",
]

[project.scripts]
rcdesign = "rcdesign.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "nox>=2025.5.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.9",
]
docs = [
    "markdown-callouts>=0.4.0",
    "mkdocs>=1.6.1",
    "mkdocs-click>=0.9.0",
    "mkdocstrings>=0.29.1",
    "mkdocstrings-python>=1.16.10",
    "pymdown-extensions>=10.15",
]

[project.urls]
Documentation = "https://github.com/satish-annigeri/rcdesign#readme"
Issues = "https://github.com/satish-annigeri/rcdesign/issues"
Source = "https://github.com/satish-annigeri/rcdesign"
Home = "https://github.com/satish-annigeri/rcdesign"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "def report",
    "def asdict",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 130
