[metadata]
name = rcdesign
version = 0.2.2
author = Satish Annigeri
author_email = satish.annigeri@gmail.com
description = A package for analysis and design of reinforced concrete sections
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/satish-annigeri/rcdesign
project_urls =
    Bug Tracker = https://github.com/satish-annigeri/rcdesign/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.7

[options.packages.find]
where = .