[metadata]
name = rcdesign
version = 0.2.0
author = Satish Annigeri
author_email = satish.annigeri@gmail.com
description = A package for analysis and design of reinforced concrete sections
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/satish-annigeri/rcdesign
project_urls =
    Bug Tracker = https://github.com/satish-annigeri/rcdesign/issues
classifiers =
    Intended Audience :: Developers
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    scipy
    sympy

[options.packages.find]
where = .

[flake8]
max-line-length = 100